k8s/backend/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-ns-prefix
spec:
  stripPrefix:
    prefixes:
      - /${NS}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backend
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/${NS}`)
      kind: Rule
      services:
        - name: backend
          port: 8080
      middlewares:
        - name: strip-ns-prefix
